images refinement and and some html elements added

--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
         <div class="container">
             <div class="about-content">
                 <div class="img-side">
-                    <div class="img-side__main-img">
-                        <img src="images/mee.jpg" alt="mee">
-                    </div>
+                    <img class="work-emoji" src="images/work-emojii.png" alt="emoji">
+                    <img class="img-side__main-img" src="images/mee.jpg" alt="mee">
+                    <span>
+                        <img src="images/title.svg" alt="text">
+                    </span>
                     <div class="text-side">
                         <h3>About me</h3>
                         <h4>
@@ -120,7 +122,7 @@
     <section id="project" class="project">
         <div class="container">
             <h2 class="newprojects">
-                New Projects are coming soon.. 🤠
+                Projects are coming soon.. 🙂
             </h2>
         </div>
     </section>
