--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 <link rel="stylesheet" href="css/master.css">
 
-<link rel="icon" type="images/png" href="/images/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="images/svg+xml" href="/images/favicon.svg" />
-<link rel="shortcut icon" href="/images/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+<link rel="icon" type="images/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="images/svg+xml" href="/images/favicon/favicon.svg" />
+<link rel="shortcut icon" href="/images/favicon/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
 
 <title>Sohaib Malik | Aspiring Software Developer</title>
 
