CSS updated and cleared some bugs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#project">Project</a>
+                    <a href="#projects">Project</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
@@ -78,7 +78,9 @@
                               </svg></a>
                          </span>
                     </div>
-                    <div class="hero-img"><img src="images/sohaibimg.png" alt="Sohaib's-Image"></div>
+                    <div class="hero-img">
+                        <!-- <img src="images/sohaibimg.png" alt="Sohaib's-Image"> -->
+                    </div>
                 </div>
                 <div class="skills">
                     <p>Tech Stack</p>
@@ -125,7 +127,7 @@
             </div>
         </div>
     </section>
-    <section id="project" class="project">
+    <section id="projects" class="project">
         <div class="container">
             <h2 class="newprojects">
                 Projects are coming soon.. 🙂
@@ -135,11 +137,11 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="contact__content">
-                <div class="contacttitle">
+                <div class="contact__title">
                     <p>contact</p>
                 </div>
                 <div class="contact__icons">
-                    <div class="contact icon-box">
+                    <div class="contact__icon-box">
                         <span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="tabler-icon tabler-icon-map-search"><path d="M11 18l-2 -1l-6 3v-13l6 -3l6 3l6 -3v7.5"></path><path d="M9 4v13"></path><path d="M15 7v5"></path><path d="M18 18m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path><path d="M20.2 20.2l1.8 1.8"></path></svg>
                         </span>
@@ -167,7 +169,7 @@
     <div class="container">
         <div class="footerb">
                 <h3>Copyright © 2025. All rights are reserved</h3>
-                <div class="footerb_socials">
+                <div class="footerb__socials">
                     <a aria-label="linkedin" rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/sohaibmalikdev/"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M8 11v5" />
