Refined and added some features

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                     <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#projects">Project</a>
+                    <a href="#projects">Projects</a>
+                </li>
+                <li>
+                    <a href="#articles">Articles</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
@@ -78,8 +81,7 @@
                               </svg></a>
                          </span>
                     </div>
-                    <div class="hero-img">
-                        <!-- <img src="images/sohaibimg.png" alt="Sohaib's-Image"> -->
+                    <div class="hero-img"> 
                     </div>
                 </div>
                 <div class="skills">
@@ -94,6 +96,18 @@
                             </li>
                             <li>
                                 <img src="https://skillicons.dev/icons?i=git" alt="skill-icons">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="certifications">
+                    <p>Certifications & Badges</p>
+                    <div class="platform">
+                        <ul>
+                            <li>
+                                <a href="https://www.credly.com/users/sohaibmalikdev" target="_blank">
+                                    <img src="https://info.credly.com/hubfs/Credly_images_2022/Logo.svg" alt="Credly Badges">
+                                  </a>
                             </li>
                         </ul>
                     </div>
@@ -117,7 +131,7 @@
                             <br>
                             based in Karachi, Pakistan 📍
                         </h4>
-                        <p> Hey, my name is Sohaib.
+                        <p> Hey, my name is Sohaib. 👋🏻
                         <br>
                         <br>
                         I'm currently learning and exploring new skills and technologies to stay up-to-date with modern development practices.
@@ -129,16 +143,37 @@
     </section>
     <section id="projects" class="project">
         <div class="container">
-            <h2 class="newprojects">
-                Projects are coming soon.. 🙂
+            <h2 class="new-projects">
+                New Projects are coming soon.. 🤠
             </h2>
+            <div class="img-project">
+                <img src="images/ExploringIdeas.png" alt="Exploring New Ideas">
+            </div>
+        </div>
+    </section>
+    <section id="articles" class="articles">
+        <div class="container">
+           <div class="article-title">
+            <h3>articles</h3>
+           </div> 
+            <div class="article-list">
+                <ul>
+                    <li>
+                        <h2>I Took the Google AI Essentials Course - Here's What I Learned</h2>
+                        <p>AI in the Workplace: A Guide for Professionals. Discover how artificial intelligence is impacting various sectors and develop essential skills to stay ahead of the curve.</p>
+                        <a href="https://www.linkedin.com/pulse/i-finished-google-ai-essentials-course-heres-what-learned-malik-hds2c/?trackingId=nqKUa8BcFndeRPtF5jrAgQ%3D%3D" target="_blank">Read on LinkedIn</a>
+                      </li>
+                </ul>
+                
+              </div>
         </div>
     </section>
     <section id="contact" class="contact">
         <div class="container">
-            <div class="contact__content">
+            <div class="contact-content">
                 <div class="contact__title">
                     <p>contact</p>
+                    <h3>Don't be shy! Hit me up! 👇</h3>
                 </div>
                 <div class="contact__icons">
                     <div class="contact__icon-box">
