--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
     <section id="articles" class="articles">
         <div class="container">
            <div class="article-title">
-            <h3>articles</h3>
+            <h2>featured articles</h2>
            </div> 
             <div class="article-list">
                 <ul>
                     <li>
-                        <h2>I Took the Google AI Essentials Course - Here's What I Learned</h2>
-                        <p>AI in the Workplace: A Guide for Professionals. Discover how artificial intelligence is impacting various sectors and develop essential skills to stay ahead of the curve.</p>
-                        <a href="https://www.linkedin.com/pulse/i-finished-google-ai-essentials-course-heres-what-learned-malik-hds2c/?trackingId=nqKUa8BcFndeRPtF5jrAgQ%3D%3D" target="_blank">Read on LinkedIn</a>
+                        <a href="https://www.linkedin.com/pulse/i-finished-google-ai-essentials-course-heres-what-learned-malik-hds2c/?trackingId=nqKUa8BcFndeRPtF5jrAgQ%3D%3D" target="_blank"><h1>I Took the Google AI Essentials Course - Here's What I Learned</h1></a>
+                        <br>
+                        <p>Discover how artificial intelligence is impacting various sectors and discover essential skills to stay ahead of the curve.</p>                     
                       </li>
                 </ul>
                 
