--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                     <div class="hero-text">
                         <h1>Aspiring Software Developer</h1>
                         <p>Hi! I'm Sohaib Malik. An aspiring software developer based in Karachi, Pakistan.📍</p>
-                        <!-- <div class="social-links"> -->
-                            <span>
+                        <span>
                             <a aria-label="linkedin" rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/sohaibmalikdev/"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                                 <path d="M8 11v5" />
@@ -80,10 +79,9 @@
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                                 <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                               </svg></a>
-                         </span>
+                        </span>
                     </div>
-                    <div class="hero-img"> 
-                    </div>
+                    <div class="hero-img"></div>
                 </div>
                 <div class="skills">
                     <p>Tech Stack</p>
@@ -125,6 +123,7 @@
                     <span>
                         <img src="images/title.svg" alt="text">
                     </span>
+                </div>
                     <div class="text-side">
                         <h3>About me</h3>
                         <h4>
@@ -138,14 +137,13 @@
                         I'm currently learning and exploring new skills and technologies to stay up-to-date with modern development practices.
                         </p>
                     </div>
-                </div>
             </div>
         </div>
     </section>
     <section id="projects" class="project">
         <div class="container">
             <h2 class="new-projects">
-                New Projects are coming soon.. 🤠
+                Exploring new tools as part of my ongoing learning journey.. 🙂
             </h2>
             <div class="img-project">
                 <img src="images/ExploringIdeas.png" alt="Exploring New Ideas">
