refine and added JavaScript code removed some css

--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
                     <div class="logos">
                         <ul>
                             <li>
-                                <img src="https://skillicons.dev/icons?i=html,css" alt="skill-icons">
+                                <img src="https://skillicons.dev/icons?i=html" alt="skill-icons">
+                            </li>
+                            <li>
+                                <img src="https://skillicons.dev/icons?i=css" alt="skill-icons">
                             </li>
                             <li>
                                 <img src="https://skillicons.dev/icons?i=js" alt="skill-icons">
