--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
                         <br>
                         <p>Discover how artificial intelligence is impacting various sectors and discover essential skills to stay ahead of the curve.</p>                     
                       </li>
+                      <li>
+                        <a href="https://www.linkedin.com/pulse/i-took-google-prompting-essentials-course-changed-how-sohaib-malik-t8vgc" target="_blank">
+                            <h1>I Took the Google Prompting Essentials Course - And It Changed How I Use AI</h1></a>
+                            <br>
+                            <p>I've taken Google AI & Prompting Essentials courses as part of my independent study journey. Both courses are a valuable resource for anyone seeking to enhance their AI abilities.</p>
+                      </li>
                 </ul>
                 
               </div>
