meta tags updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:title" content="Sohaib Malik | Aspiring Software Developer">
 <meta property="og:description" content="I'm Sohaib Malik, an aspiring software developer with a passion for building clean, responsive, and user-friendly websites. This portfolio showcases my skills in HTML, CSS, and JavaScript through a collection of projects demonstrating my ability to create engaging and interactive web experiences.">
 <meta property="og:image" content="images/sohaibimg.png"> 
-<!-- <meta property="og:url" content="https://">  -->
+<meta property="og:url" content="https://sohaibdevv.github.io/Portfolio/"> 
 
 <link rel="stylesheet" href="css/master.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
