changed some features

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="I'm Sohaib Malik, an aspiring software developer with a passion for building clean, responsive, and user-friendly websites. This portfolio showcases my skills in HTML, CSS, and JavaScript through a collection of projects demonstrating my ability to create engaging and interactive web experiences.">
+<meta name="description" content="I'm Sohaib Malik, an aspiring software developer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
 <meta name="theme-color" content="#000000">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="-1">
@@ -13,8 +13,8 @@
 <meta name="Portfolio" content="Aspiring software developer portfolio"/>
 
 <meta property="og:title" content="Sohaib Malik | Aspiring Software Developer">
-<meta property="og:description" content="I'm Sohaib Malik, an aspiring software developer with a passion for building clean, responsive, and user-friendly websites. This portfolio showcases my skills in HTML, CSS, and JavaScript through a collection of projects demonstrating my ability to create engaging and interactive web experiences.">
-<meta property="og:image" content="images/sohaibimg.png"> 
+<meta property="og:description" content="I'm Sohaib Malik, an aspiring software developer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
+<meta property="og:image" content="/images/sohaibimg.jpg" > 
 <meta property="og:url" content="https://sohaibdevv.github.io/Portfolio/"> 
 
 <link rel="stylesheet" href="css/master.css">
@@ -29,6 +29,7 @@
 <link rel="icon" type="images/svg+xml" href="/images/favicon/favicon.svg" />
 <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
+<link rel="manifest" href="/images/favicon/site.webmanifest" />
 
 <title>Sohaib Malik | Aspiring Software Developer</title>
 
