--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
-<link rel="icon" type="images/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
+<!-- <link rel="icon" type="images/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="images/svg+xml" href="/images/favicon/favicon.svg" />
 <link rel="shortcut icon" href="/images/favicon/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
-<link rel="manifest" href="/images/favicon/site.webmanifest" />
+<link rel="manifest" href="/images/favicon/site.webmanifest" /> -->
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
+<link rel="manifest" href="images/favicon_io/site.webmanifest">
 
 <title>Sohaib Malik | Aspiring Software Developer</title>
 
