deleted some files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:title" content="Sohaib Malik | Aspiring Software Developer">
 <meta property="og:description" content="I'm Sohaib Malik, an aspiring software developer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
 <meta property="og:image" content="/images/sohaibimg.jpg" > 
-<meta property="og:url" content="https://sohaibdevv.github.io/Portfolio/"> 
+<meta property="og:url" content="https://sohaibdevv.github.io/Portfolio"> 
 
 <link rel="stylesheet" href="css/master.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,11 +25,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
-<!-- <link rel="icon" type="images/png" href="/images/favicon/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="images/svg+xml" href="/images/favicon/favicon.svg" />
-<link rel="shortcut icon" href="/images/favicon/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png" />
-<link rel="manifest" href="/images/favicon/site.webmanifest" /> -->
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
