--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="-1">
 <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
-<meta name="Portfolio" content="Aspiring software developer portfolio"/>
+<meta name="author" content="Sohaib Malik"/>
 
 <meta property="og:title" content="Sohaib Malik | Aspiring Software Developer">
 <meta property="og:description" content="I'm Sohaib Malik, an aspiring software developer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
-<meta property="og:image" content="/images/sohaibimg.jpg" > 
+<meta property="og:image" content="/images/sohaibimg.jpeg" > 
 <meta property="og:url" content="https://sohaibdevv.github.io/Portfolio"> 
 
-<link rel="stylesheet" href="css/master.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="css/master.css">
 
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
