--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
                     <div class="logos">
                         <ul>
                             <li>
-                                <img src="https://skillicons.dev/icons?i=html" alt="skill-icons">
+                                <img src="https://skillicons.dev/icons?i=html" alt="HTML">
                             </li>
                             <li>
-                                <img src="https://skillicons.dev/icons?i=css" alt="skill-icons">
+                                <img src="https://skillicons.dev/icons?i=css" alt="CSS">
                             </li>
                             <li>
-                                <img src="https://skillicons.dev/icons?i=js" alt="skill-icons">
+                                <img src="https://skillicons.dev/icons?i=js" alt="JavaScript">
                             </li>
                             <li>
-                                <img src="https://skillicons.dev/icons?i=git" alt="skill-icons">
+                                <img src="https://skillicons.dev/icons?i=git" alt="Git">
                             </li>
                         </ul>
                     </div>
