--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <meta property="og:title" content="Sohaib Malik | Aspiring Software Developer">
 <meta property="og:description" content="I'm Sohaib Malik, an aspiring software developer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
-<meta property="og:image" content="https://sohaibdevv.github.io/Portfolio/sohaibimg.jpeg" > 
+<meta property="og:image" content="https://sohaibdevv.github.io/Portfolio/images/sohaibimg.jpeg" > 
 <meta property="og:url" content="https://sohaibdevv.github.io/Portfolio"> 
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
