--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="contact-content">
                 <div class="contact__title">
                     <p>contact</p>
-                    <h3>Don't be shy! Hit me up! 👇</h3>
+                    <h3>Feel free to contact. ☎ 👇</h3>
                 </div>
                 <div class="contact__icons">
                     <div class="contact__icon-box">
