--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="I'm Sohaib Malik, an aspiring software developer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
+<meta name="description" content="I'm Sohaib Malik, an aspiring software engineer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
 <meta name="theme-color" content="#000000">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="-1">
 <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
 <meta name="author" content="Sohaib Malik"/>
 
-<meta property="og:title" content="Sohaib Malik | Aspiring Software Developer">
-<meta property="og:description" content="I'm Sohaib Malik, an aspiring software developer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
+<meta property="og:title" content="Sohaib Malik | Aspiring Software Engineer">
+<meta property="og:description" content="I'm Sohaib Malik, an aspiring software Engineer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
 <meta property="og:image" content="https://sohaibdevv.github.io/Portfolio/images/sohaibimg.jpeg" > 
 <meta property="og:url" content="https://sohaibdevv.github.io/Portfolio"> 
 
@@ -31,7 +31,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
 <link rel="manifest" href="images/favicon_io/site.webmanifest">
 
-<title>Sohaib Malik | Aspiring Software Developer</title>
+<title>Sohaib Malik | Aspiring Software Engineer</title>
 
 </head>
 
@@ -65,8 +65,8 @@
             <div class="content">
                 <div class="hero-main">
                     <div class="hero-text">
-                        <h1>Aspiring Software Developer</h1>
-                        <p>Hi! I'm Sohaib Malik. An aspiring software developer based in Karachi, Pakistan.📍</p>
+                        <h1>Aspiring Software Engineer</h1>
+                        <p>Hi! I'm Sohaib Malik. An aspiring software engineer based in Karachi, Pakistan.📍</p>
                         <span>
                             <a aria-label="linkedin" rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/sohaibmalikdev/"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -131,7 +131,7 @@
                     <div class="text-side">
                         <h3>About me</h3>
                         <h4>
-                            Aspiring Software Developer
+                            Aspiring Software Engineer
                             <br>
                             based in Karachi, Pakistan 📍
                         </h4>
