--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="I'm Sohaib Malik, an aspiring software engineer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
+<meta name="description" content="sohaibmalikdev | Aspiring Software Engineer based in Karachi, Pakistan.">
 <meta name="theme-color" content="#000000">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="-1">
