--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <p> Hey, my name is Sohaib. 👋🏻
                         <br>
                         <br>
-                        I'm currently learning and exploring new skills and technologies to stay up-to-date with modern development practices.
+                         I'm currently learning and trying out new technologies to stay current with modern development practices.
                         </p>
                     </div>
             </div>
