--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:title" content="Sohaib Malik | Aspiring Software Engineer">
 <meta property="og:description" content="I'm Sohaib Malik, an aspiring software Engineer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
 <meta property="og:image" content="https://sohaibdevv.github.io/my-first-portfolio-website/images/sohaibimg.jpeg" > 
-<meta property="og:url" content="https://sohaibdevv.github.io/Portfolio"> 
+<meta property="og:url" content="https://sohaibdevv.github.io/my-first-portfolio-website"> 
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
