--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="-1">
 <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
-<meta name="author" content="Sohaib Malik"/>
+<meta name="author" content="Sohaibmalikdev | sohaibdevv"/>
 
 <meta property="og:title" content="Sohaib Malik | Aspiring Software Engineer">
 <meta property="og:description" content="I'm Sohaib Malik, an aspiring software Engineer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
