--- a/index.html
+++ b/index.html
@@ -69,18 +69,11 @@
                         <h1>Aspiring Software Engineer</h1>
                         <p>Hi! I'm Sohaib Malik. An aspiring software engineer based in Karachi, Pakistan.📍</p>
                         <span>
-                            <a aria-label="linkedin" rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/sohaibmalikdev/"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                <path d="M8 11v5" />
-                                <path d="M8 8v.01" />
-                                <path d="M12 16v-5" />
-                                <path d="M16 16v-3a2 2 0 1 0 -4 0" />
-                                <path d="M3 7a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v10a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z" />
+                            <a aria-label="linkedin" rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/sohaibmalikdev/"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M8 11v5" /><path d="M8 8v.01" /><path d="M12 16v-5" /><path d="M16 16v-3a2 2 0 1 0 -4 0" /><path d="M3 7a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v10a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z" />
                               </svg></a>
-                              <a aria-label="GitHub" rel="noopener noreferrer" target="_blank" href="https://github.com/sohaibdevv"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-                              </svg></a>
+                              <a aria-label="GitHub" rel="noopener noreferrer" target="_blank" href="https://github.com/sohaibdevv"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                </svg></a>
+                                <a aria-label="Medium" rel="noopener noreferrer" target="_blank" href="https://medium.com/@sohaibmalikdev"><svg  xmlns="http://www.w3.org/2000/svg"  width="33"  height="33"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-medium"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" /><path d="M8 9h1l3 3l3 -3h1" /><path d="M8 15l2 0" /><path d="M14 15l2 0" /><path d="M9 9l0 6" /><path d="M15 9l0 6" /></svg></a>
                         </span>
                     </div>
                     <div class="hero-img"></div>
@@ -165,7 +158,7 @@
                     <li>
                         <a href="https://www.linkedin.com/pulse/i-finished-google-ai-essentials-course-heres-what-learned-malik-hds2c/?trackingId=nqKUa8BcFndeRPtF5jrAgQ%3D%3D" target="_blank"><h1>I Took the Google AI Essentials Course - Here's What I Learned</h1></a>
                         <br>
-                        <p>Discover how artificial intelligence is impacting various sectors and discover essential skills to stay ahead of the curve.</p>                     
+                        <p>Discover how artificial intelligence is impacting various sectors and discover essential skills to stay ahead of the curve.</p>
                       </li>
                       <li>
                         <a href="https://www.linkedin.com/pulse/i-took-google-prompting-essentials-course-changed-how-sohaib-malik-t8vgc" target="_blank">
@@ -174,7 +167,6 @@
                             <p>I've taken Google AI & Prompting Essentials courses as part of my independent study journey. Both courses are a valuable resource for anyone seeking to enhance their AI abilities.</p>
                       </li>
                 </ul>
-                
               </div>
         </div>
     </section>
@@ -227,6 +219,7 @@
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
                       </svg></a>
+                      <a aria-label="Medium" rel="noopener noreferrer" target="_blank" href="https://medium.com/@sohaibmalikdev"><svg  xmlns="http://www.w3.org/2000/svg"  width="33"  height="33"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.8"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-medium"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" /><path d="M8 9h1l3 3l3 -3h1" /><path d="M8 15l2 0" /><path d="M14 15l2 0" /><path d="M9 9l0 6" /><path d="M15 9l0 6" /></svg></a>
                 </div>
         </div>
     </div>
