--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="I'm Sohaib Malik, an aspiring software engineer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
-<meta name="description" content="sohaibmalikdev | Aspiring Software Engineer based in Karachi, Pakistan.">
+<meta name="description" content="I'm Sohaib Malik (sohaibmalikdev), an aspiring software engineer based in Karachi, Pakistan. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
 <meta name="theme-color" content="#000000">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="-1">
@@ -67,7 +66,7 @@
                 <div class="hero-main">
                     <div class="hero-text">
                         <h1>Aspiring Software Engineer</h1>
-                        <p>Hi! I'm Sohaib Malik. An aspiring software engineer based in Karachi, Pakistan.📍</p>
+                        <p>Hi, I'm Sohaib Malik (sohaibmalikdev). An aspiring software engineer based in Karachi, Pakistan.📍</p>
                         <span>
                             <a aria-label="linkedin" rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/sohaibmalikdev/"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M8 11v5" /><path d="M8 8v.01" /><path d="M12 16v-5" /><path d="M16 16v-3a2 2 0 1 0 -4 0" /><path d="M3 7a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v10a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z" />
                               </svg></a>
@@ -129,7 +128,7 @@
                             <br>
                             based in Karachi, Pakistan 📍
                         </h4>
-                        <p> Hey, my name is Sohaib. 👋🏻
+                        <p> Hey, my name is Sohaib. (sohaibmalikdev) 👋🏻
                         <br>
                         <br>
                          I'm currently learning and trying out new technologies to stay current with modern development practices.
