--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="I'm Sohaib Malik (sohaibmalikdev), an aspiring software engineer based in Karachi, Pakistan. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
+<meta name="description" content="Sohaib Malik (sohaibmalikdev), an aspiring software engineer based in Karachi, Pakistan, passionate about exploring new and modern software development technologies. I'm driven by the constant learning and evolution within the tech industry.">
+    
 <meta name="theme-color" content="#000000">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="-1">
-<meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
+
 <meta name="author" content="Sohaibmalikdev | sohaibdevv"/>
 
 <meta property="og:title" content="Sohaib Malik | Aspiring Software Engineer">
-<meta property="og:description" content="I'm Sohaib Malik, an aspiring software Engineer. This portfolio showcases my skills in HTML, CSS, and JavaScript demonstrating my ability to create engaging and interactive web experiences.">
+<meta property="og:description" content="I'm Sohaib Malik, an aspiring software Engineer. I'm exploring new technologies to learn modern development.">
 <meta property="og:image" content="https://sohaibdevv.github.io/my-first-portfolio-website/images/sohaibimg.jpeg" > 
 <meta property="og:url" content="https://sohaibdevv.github.io/my-first-portfolio-website"> 
 
@@ -66,7 +65,7 @@
                 <div class="hero-main">
                     <div class="hero-text">
                         <h1>Aspiring Software Engineer</h1>
-                        <p>Hi, I'm Sohaib Malik (sohaibmalikdev). An aspiring software engineer based in Karachi, Pakistan.📍</p>
+                        <p>Hi, I'm Sohaib Malik. An aspiring software engineer based in Karachi, Pakistan.📍</p>
                         <span>
                             <a aria-label="linkedin" rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/sohaibmalikdev/"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-brand-linkedin"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M8 11v5" /><path d="M8 8v.01" /><path d="M12 16v-5" /><path d="M16 16v-3a2 2 0 1 0 -4 0" /><path d="M3 7a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v10a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z" />
                               </svg></a>
@@ -128,10 +127,14 @@
                             <br>
                             based in Karachi, Pakistan 📍
                         </h4>
-                        <p> Hey, my name is Sohaib. (sohaibmalikdev) 👋🏻
+                        <p>
+                            Hey, my name is Sohaib. (SohaibMalikDev) 👋🏻
                         <br>
                         <br>
-                         I'm currently learning and trying out new technologies to stay current with modern development practices.
+                         As you might find on my LinkedIn, I'm driven by the pursuit of knowledge in new technologies and the exciting journey of modern development.
+                        </p>
+                        <p>
+                            The ever-changing nature of technology and the constant opportunities for learning are what inspire me to build and innovate.
                         </p>
                     </div>
             </div>
