--- a/index.html
+++ b/index.html
@@ -127,15 +127,12 @@
                             <br>
                             based in Karachi, Pakistan 📍
                         </h4>
-                        <p>
-                            Hey, my name is Sohaib. (SohaibMalikDev) 👋🏻
+                        <p>Hi, I'm Sohaib Malik (sohaibmalikdev)
                         <br>
                         <br>
-                         As you might find on my LinkedIn, I'm driven by the pursuit of knowledge in new technologies and the exciting journey of modern development.
-                        </p>
-                        <p>
-                            The ever-changing nature of technology and the constant opportunities for learning are what inspire me to build and innovate.
-                        </p>
+                         I'm actively exploring new technologies to learn modern development, driven by the constant opportunity to learn and see how things change.</p>
+                        <br>
+                        <p>I'm passionate about embracing the evolving tech landscape and eager to contribute my skills and learn continuously.</p>
                     </div>
             </div>
         </div>
