--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                         <br>
                          I'm actively exploring new technologies to learn modern development, driven by the constant opportunity to learn and see how things change.</p>
                         <br>
-                        <p>I'm passionate about embracing the evolving tech landscape and eager to contribute my skills and learn continuously.</p>
+                        <p>
+                        I am inspired by the evolving tech landscape and eager to contribute my skills and learn continuously.
+                        </p>
                     </div>
             </div>
         </div>
