--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="images/favicon_io/site.webmanifest">
 
-    <title>Sohaib Malik | Aspiring Software Engineer</title>
+    <title>Sohaib Malik | Portfolio</title>
 </head>
 <body>
     <header>
