Refactor: Update meta descriptions and titles to reflect current status as a software engineer; enhance hover effects with utility function for better code organization and readability.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Sohaib Malik (sohaibmalikdev), an aspiring software engineer based in Karachi, Pakistan, passionate about exploring new and modern software development technologies. I'm driven by the constant learning and evolution within the tech industry.">
+    <meta name="description" content="Sohaib Malik (sohaibmalikdev), a software engineer based in Karachi, Pakistan, passionate about exploring new and modern software development technologies. I'm driven by the constant learning and evolution within the tech industry.">
     <meta name="theme-color" content="#000000">
     <meta name="author" content="Sohaibmalikdev | sohaibdevv"/>
-    <meta property="og:title" content="Sohaib Malik | Aspiring Software Engineer">
-    <meta property="og:description" content="I'm Sohaib Malik, an aspiring software Engineer. I'm exploring new technologies to learn modern development.">
+    <meta property="og:title" content="Sohaib Malik | Software Engineer">
+    <meta property="og:description" content="I'm Sohaib Malik, a software Engineer. I'm exploring new technologies to learn modern development.">
     <meta property="og:image" content="https://sohaibdevv.github.io/my-first-portfolio-website/images/sohaibimg.jpeg">
     <meta property="og:url" content="https://sohaibdevv.github.io/my-first-portfolio-website">
 
@@ -43,8 +43,8 @@
                 <div class="content">
                     <div class="hero-main">
                         <div class="hero-text">
-                            <h1>Aspiring Software Engineer</h1>
-                            <p>Hi, I'm Sohaib Malik. An aspiring software engineer based in Karachi, Pakistan.📍</p>
+                            <h1>Software Engineer</h1>
+                            <p>Hi, I'm Sohaib Malik. A software engineer based in Karachi, Pakistan.📍</p>
                             <span>
                                 <a aria-label="linkedin" rel="noreferrer" target="_blank" href="https://www.linkedin.com/in/sohaibmalikdev/">
                                     <!-- LinkedIn SVG -->
@@ -103,16 +103,12 @@
                     <div class="text-side">
                         <h3>About me</h3>
                         <h4>
-                            Aspiring Software Engineer<br>
+                            Software Engineer<br>
                             based in Karachi, Pakistan 📍
                         </h4>
                         <p>
                             Hi, I'm Sohaib Malik (sohaibmalikdev)<br><br>
-                            I'm actively exploring new technologies to learn modern development, driven by the constant opportunity to learn and see how things change.
-                        </p>
-                        <br>
-                        <p>
-                            I am inspired by the evolving tech landscape and eager to contribute my skills and learn continuously.
+                            I'm a lifelong learner, always seeking opportunities to grow my skills and knowledge.
                         </p>
                     </div>
                 </div>
