Update introduction text in index.html for improved clarity and engagement

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         </h4>
                         <p>
                             Hi, I'm Sohaib Malik (sohaibmalikdev)<br><br>
-                            I'm a lifelong learner, always seeking opportunities to grow my skills and knowledge.
+                            I'm a lifelong learner, always exploring opportunities to grow my skills and knowledge.
                         </p>
                     </div>
                 </div>
