Update meta descriptions and improve font loading in index.html
- Revised the meta description for better clarity and focus on lifelong learning.
- Updated Open Graph description to align with the new meta description.
- Added preconnect links for Google Fonts to optimize loading.
- Changed font loading links to use specific font weights and styles for Poppins and Mulish.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Sohaib Malik (sohaibmalikdev), a software engineer based in Karachi, Pakistan, passionate about exploring new and modern software development technologies. I'm driven by the constant learning and evolution within the tech industry.">
+    <meta name="description" content="Sohaib Malik (sohaibmalikdev), a software engineer based in Karachi, Pakistan. I'm a lifelong learner, always exploring opportunities to grow my skills and knowledge.">
     <meta name="theme-color" content="#000000">
     <meta name="author" content="Sohaibmalikdev | sohaibdevv"/>
     <meta property="og:title" content="Sohaib Malik | Software Engineer">
-    <meta property="og:description" content="I'm Sohaib Malik, a software Engineer. I'm exploring new technologies to learn modern development.">
+    <meta property="og:description" content="I'm Sohaib Malik, a software Engineer. I'm a lifelong learner, always exploring opportunities to grow my skills and knowledge.">
     <meta property="og:image" content="https://sohaibdevv.github.io/my-first-portfolio-website/images/sohaibimg.jpeg">
     <meta property="og:url" content="https://sohaibdevv.github.io/my-first-portfolio-website">
 
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100..900&family=Mulish:wght@200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/master.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_io/apple-touch-icon.png">
